إصلاحاات: كود إعداد_االتطوير

--- a/اختبارات/أكواد/كلما/اكبر_توقع.yml
+++ b/اختبارات/أكواد/كلما/اكبر_توقع.yml
@@ -4,27 +4,18 @@
   رمز_الخروج: 0
 
 تنفيذ:
-  - خرج: "10
-
+  - خرج: |
+      10
       9
-
       8
-
       7
-
       6
-
       5
-
       4
-
       3
-
       2
-
       1
 
-      "
     خطأ: ""
     دخل: null
     رمز_الخروج: 0
