--- a/اختبارات/أكواد/كلما/اصغر_توقع.yml
+++ b/اختبارات/أكواد/كلما/اصغر_توقع.yml
@@ -4,27 +4,18 @@
   رمز_الخروج: 0
 
 تنفيذ:
-  - خرج: "1
-
+  - خرج: |
+      1
       2
-
       3
-
       4
-
       5
-
       6
-
       7
-
       8
-
       9
-
       10
 
-      "
     خطأ: ""
     دخل: null
     رمز_الخروج: 0
