--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -193,15 +193,15 @@ if(UNIX)
 			ARCHIVE DESTINATION lib
 			LIBRARY DESTINATION lib
 			RUNTIME DESTINATION bin)
-	install (DIRECTORY ${AlifProject_SOURCE_DIR}/aliflib DESTINATION lib)
+	install (DIRECTORY aliflib DESTINATION lib)
 endif (UNIX)
 
 if(WIN32)
 	message("[*] Initializing installation settings...")
 	install (TARGETS ${Info_App} DESTINATION C:/Alif3)
-	install (DIRECTORY ${AlifProject_SOURCE_DIR}/aliflib DESTINATION C:/Alif3)
+	install (DIRECTORY aliflib DESTINATION C:/Alif3)
 endif ()
 
 # --[ Copy Examples ] ------------------------------------------------------------
 
-#file(COPY ${AlifProject_SOURCE_DIR}/examples DESTINATION ${CMAKE_BINARY_DIR}/)
+file(COPY examples DESTINATION ${CMAKE_BINARY_DIR}/)
